--- a/Biomassa-atlas_data/data_procession.ipynb
+++ b/Biomassa-atlas_data/data_procession.ipynb
@@ -1188,7 +1188,7 @@
     "\n",
     "plt.show()  # show the plot\n",
     "\n",
-    "# TÄSSÄ SAATTAA JOKIN MENNÄ VIELÄ PIELEEN, SILLÄ JOILLEKIN KLUSTEREILLE TULEE 2 PISTETTÄ"
+    "# TÄSSÄ SAATTAA JOKIN MENNÄ VIELÄ PIELEEN, SILLÄ JOILLEKIN KLUSTEREILLE TULEE 2 PISTETTÄ \n"
    ]
   },
   {
