pick up sites data to geojson for logistics_sim

--- a/Biomassa-atlas_data/data_procession.ipynb
+++ b/Biomassa-atlas_data/data_procession.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 102,
    "id": "6b706ff7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import geopandas as gpds\n",
+    "import geopandas as gpd\n",
     "import numpy as np\n",
     "import re\n",
-    "from shapely.geometry import MultiPolygon, Polygon\n",
+    "from shapely.geometry import MultiPolygon, Polygon, Point\n",
     "from sklearn.cluster import KMeans\n",
     "from geopy.distance import distance\n",
     "from ast import literal_eval\n",
@@ -1212,7 +1212,9 @@
     "plt.show()  # show the plot\n",
     "\n",
     "\n",
-    "# Color the cluster based on their masses to see the distribution of masses"
+    "# Color the cluster based on their masses to see the distribution of masses\n",
+    "\n",
+    "# NÄMÄ TÄYTYY SAADA GEOJSON-muotoon, NYT VIEDÄÄN VAIN CSV."
    ]
   },
   {
@@ -1653,7 +1655,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "67401030",
+   "id": "5f67a2e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1663,7 +1665,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "8694e1a5",
+   "id": "c55bf904",
    "metadata": {},
    "outputs": [
     {
@@ -2255,12 +2257,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "fd9ddf5e",
+   "execution_count": 99,
+   "id": "78ed3d8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    " df.to_csv('pickupSites2.csv',index=False)"
+    " df.to_csv('pickupSites.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "f1d075bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geometry = [Point(xy) for xy in zip(df['lon'], df['lat'])]\n",
+    "gdf = gpd.GeoDataFrame(df, geometry=geometry, crs='EPSG:4326')\n",
+    "gdf = gdf.drop('ClusterLocations',axis=1) # Not needed anymore, these are in the wrong form of coordinates\n",
+    "\n",
+    "## save the GeoDataFrame to a GeoJSON file\n",
+    "gdf.to_file('pickupSites.geojson', driver='GeoJSON')"
    ]
   }
  ],
