--- a/Biomassa-atlas_data/data_procession.ipynb
+++ b/Biomassa-atlas_data/data_procession.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 137,
    "id": "3ab970e7",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,8 @@
     "    cbar = plt.colorbar(sc)\n",
     "    cbar.ax.set_ylabel('Mass', fontsize=14)\n",
     "    \n",
-    "    fig.savefig(title+'.pdf')\n",
+    "    path = '/pdfs/'\n",
+    "    fig.savefig(path + title+'.pdf')\n",
     "    \n",
     "    plt.show()\n"
    ]
@@ -130,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "53f24b93",
+   "id": "d29d82d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2134,7 +2135,8 @@
    ],
    "source": [
     "filename = input(\"Enter biomassdata filename: \") + '.csv'\n",
-    "df = load_and_process_data(filename)\n",
+    "path = '/datasets/'\n",
+    "df = load_and_process_data(path+filename)\n",
     "file = filename.split('.',1)[0]\n",
     "df"
    ]
@@ -2659,7 +2661,8 @@
     "\n",
     "plt.title('Pickup sites for the file '+' '.join(filename.split(' ')[:4]) + '\\n' + ' '.join(filename.split(' ')[4:]), fontsize=16)\n",
     "\n",
-    "fig.savefig('Pickup sites for the file '+filename+'.pdf')\n",
+    "path = '/pdfs/'\n",
+    "fig.savefig(path + 'Pickup sites for the file '+filename+'.pdf')\n",
     "\n",
     "plt.show()"
    ]
@@ -2714,7 +2717,8 @@
     "gdf = gdf.drop('ClusterLocations',axis=1) # Not needed anymore, these are in the wrong form of coordinates\n",
     "\n",
     "## save the GeoDataFrame to a GeoJSON file\n",
-    "gdf.to_file(file+'.geojson', driver='GeoJSON')"
+    "path = '/geojsons/'\n",
+    "gdf.to_file(path + file+'.geojson', driver='GeoJSON')"
    ]
   }
  ],
