cluster subsets of data in thin_clusters

--- a/Biomassa-atlas_data/data_procession.ipynb
+++ b/Biomassa-atlas_data/data_procession.ipynb
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "1813f0c3",
+   "id": "70fd5599",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
     "# Coordinates for Envor's facility: (60.929833, 23.369694)\n",
     "\n",
     "#df = clean_data(df,greatestDistance,facilityLocation)\n",
-    "df = clean_data(df,50,(60.929833, 23.369694))\n",
+    "df = clean_data(df,50,facility_loc)\n",
     "\n",
     "df"
    ]
@@ -754,8 +754,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "9965ce78",
+   "execution_count": 173,
+   "id": "b00447d8",
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
        "[5875 rows x 5 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,354 +921,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "e9165cb0",
+   "execution_count": 240,
+   "id": "6b8c3c6f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "49.99921422711398\n"
+      "C:\\Users\\K-A-S\\AppData\\Local\\Temp\\ipykernel_23480\\1653436035.py:32: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  i_values[df_name]['ThinnedClusters'] = kmeans.predict(i_values[df_name]['Biomass location'].tolist())\n",
+      "C:\\Users\\K-A-S\\AppData\\Local\\Temp\\ipykernel_23480\\1653436035.py:32: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  i_values[df_name]['ThinnedClusters'] = kmeans.predict(i_values[df_name]['Biomass location'].tolist())\n",
+      "C:\\Users\\K-A-S\\AppData\\Local\\Temp\\ipykernel_23480\\1653436035.py:32: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  i_values[df_name]['ThinnedClusters'] = kmeans.predict(i_values[df_name]['Biomass location'].tolist())\n",
+      "C:\\Users\\K-A-S\\AppData\\Local\\Temp\\ipykernel_23480\\1653436035.py:32: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  i_values[df_name]['ThinnedClusters'] = kmeans.predict(i_values[df_name]['Biomass location'].tolist())\n",
+      "C:\\Users\\K-A-S\\AppData\\Local\\Temp\\ipykernel_23480\\1653436035.py:32: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  i_values[df_name]['ThinnedClusters'] = kmeans.predict(i_values[df_name]['Biomass location'].tolist())\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Mass</th>\n",
-       "      <th>Biomass location</th>\n",
-       "      <th>MassCoefficient</th>\n",
-       "      <th>LocationWithMassCoefficient</th>\n",
-       "      <th>Cluster</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.880735</td>\n",
-       "      <td>(345500.0, 6734500.0)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>(345500.0, 6734500.0)</td>\n",
-       "      <td>198</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.704648</td>\n",
-       "      <td>(344500.0, 6734500.0)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>(344500.0, 6734500.0)</td>\n",
-       "      <td>198</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>48.168853</td>\n",
-       "      <td>(334500.0, 6734500.0)</td>\n",
-       "      <td>48</td>\n",
-       "      <td>(334500.0, 6734500.0, 334500.0, 6734500.0, 334...</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>56.084414</td>\n",
-       "      <td>(272500.0, 6734500.0)</td>\n",
-       "      <td>56</td>\n",
-       "      <td>(272500.0, 6734500.0, 272500.0, 6734500.0, 272...</td>\n",
-       "      <td>186</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>85.959836</td>\n",
-       "      <td>(271500.0, 6734500.0)</td>\n",
-       "      <td>86</td>\n",
-       "      <td>(271500.0, 6734500.0, 271500.0, 6734500.0, 271...</td>\n",
-       "      <td>186</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5909</th>\n",
-       "      <td>33.390363</td>\n",
-       "      <td>(304500.0, 6710500.0)</td>\n",
-       "      <td>33</td>\n",
-       "      <td>(304500.0, 6710500.0, 304500.0, 6710500.0, 304...</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5910</th>\n",
-       "      <td>54.179336</td>\n",
-       "      <td>(303500.0, 6710500.0)</td>\n",
-       "      <td>54</td>\n",
-       "      <td>(303500.0, 6710500.0, 303500.0, 6710500.0, 303...</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5911</th>\n",
-       "      <td>67.047351</td>\n",
-       "      <td>(302500.0, 6710500.0)</td>\n",
-       "      <td>67</td>\n",
-       "      <td>(302500.0, 6710500.0, 302500.0, 6710500.0, 302...</td>\n",
-       "      <td>79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5912</th>\n",
-       "      <td>139.271744</td>\n",
-       "      <td>(301500.0, 6710500.0)</td>\n",
-       "      <td>139</td>\n",
-       "      <td>(301500.0, 6710500.0, 301500.0, 6710500.0, 301...</td>\n",
-       "      <td>79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5913</th>\n",
-       "      <td>195.210328</td>\n",
-       "      <td>(300500.0, 6710500.0)</td>\n",
-       "      <td>195</td>\n",
-       "      <td>(300500.0, 6710500.0, 300500.0, 6710500.0, 300...</td>\n",
-       "      <td>79</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1967 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Mass       Biomass location  MassCoefficient  \\\n",
-       "0       0.880735  (345500.0, 6734500.0)                1   \n",
-       "1       0.704648  (344500.0, 6734500.0)                1   \n",
-       "2      48.168853  (334500.0, 6734500.0)               48   \n",
-       "54     56.084414  (272500.0, 6734500.0)               56   \n",
-       "55     85.959836  (271500.0, 6734500.0)               86   \n",
-       "...          ...                    ...              ...   \n",
-       "5909   33.390363  (304500.0, 6710500.0)               33   \n",
-       "5910   54.179336  (303500.0, 6710500.0)               54   \n",
-       "5911   67.047351  (302500.0, 6710500.0)               67   \n",
-       "5912  139.271744  (301500.0, 6710500.0)              139   \n",
-       "5913  195.210328  (300500.0, 6710500.0)              195   \n",
-       "\n",
-       "                            LocationWithMassCoefficient  Cluster  \n",
-       "0                                 (345500.0, 6734500.0)      198  \n",
-       "1                                 (344500.0, 6734500.0)      198  \n",
-       "2     (334500.0, 6734500.0, 334500.0, 6734500.0, 334...      108  \n",
-       "54    (272500.0, 6734500.0, 272500.0, 6734500.0, 272...      186  \n",
-       "55    (271500.0, 6734500.0, 271500.0, 6734500.0, 271...      186  \n",
-       "...                                                 ...      ...  \n",
-       "5909  (304500.0, 6710500.0, 304500.0, 6710500.0, 304...       33  \n",
-       "5910  (303500.0, 6710500.0, 303500.0, 6710500.0, 303...       33  \n",
-       "5911  (302500.0, 6710500.0, 302500.0, 6710500.0, 302...       79  \n",
-       "5912  (301500.0, 6710500.0, 301500.0, 6710500.0, 301...       79  \n",
-       "5913  (300500.0, 6710500.0, 300500.0, 6710500.0, 300...       79  \n",
-       "\n",
-       "[1967 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 159,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = thin_clusters(df,10,5,2,facility_loc)\n",
-    "a['tire_number_5']"
+    "thinned_and_clustered_tires = thin_clusters(df,10,5,0.75,facility_loc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "id": "90748c23",
+   "execution_count": 247,
+   "id": "74c98298",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Mass</th>\n",
-       "      <th>Biomass location</th>\n",
-       "      <th>MassCoefficient</th>\n",
-       "      <th>LocationWithMassCoefficient</th>\n",
-       "      <th>Cluster</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.880735</td>\n",
-       "      <td>(345500.0, 6734500.0)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>(345500.0, 6734500.0)</td>\n",
-       "      <td>198</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.704648</td>\n",
-       "      <td>(344500.0, 6734500.0)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>(344500.0, 6734500.0)</td>\n",
-       "      <td>198</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>48.168853</td>\n",
-       "      <td>(334500.0, 6734500.0)</td>\n",
-       "      <td>48</td>\n",
-       "      <td>(334500.0, 6734500.0, 334500.0, 6734500.0, 334...</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>12.519086</td>\n",
-       "      <td>(333500.0, 6734500.0)</td>\n",
-       "      <td>13</td>\n",
-       "      <td>(333500.0, 6734500.0, 333500.0, 6734500.0, 333...</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>9.030584</td>\n",
-       "      <td>(332500.0, 6734500.0)</td>\n",
-       "      <td>9</td>\n",
-       "      <td>(332500.0, 6734500.0, 332500.0, 6734500.0, 332...</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5909</th>\n",
-       "      <td>33.390363</td>\n",
-       "      <td>(304500.0, 6710500.0)</td>\n",
-       "      <td>33</td>\n",
-       "      <td>(304500.0, 6710500.0, 304500.0, 6710500.0, 304...</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5910</th>\n",
-       "      <td>54.179336</td>\n",
-       "      <td>(303500.0, 6710500.0)</td>\n",
-       "      <td>54</td>\n",
-       "      <td>(303500.0, 6710500.0, 303500.0, 6710500.0, 303...</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5911</th>\n",
-       "      <td>67.047351</td>\n",
-       "      <td>(302500.0, 6710500.0)</td>\n",
-       "      <td>67</td>\n",
-       "      <td>(302500.0, 6710500.0, 302500.0, 6710500.0, 302...</td>\n",
-       "      <td>79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5912</th>\n",
-       "      <td>139.271744</td>\n",
-       "      <td>(301500.0, 6710500.0)</td>\n",
-       "      <td>139</td>\n",
-       "      <td>(301500.0, 6710500.0, 301500.0, 6710500.0, 301...</td>\n",
-       "      <td>79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5913</th>\n",
-       "      <td>195.210328</td>\n",
-       "      <td>(300500.0, 6710500.0)</td>\n",
-       "      <td>195</td>\n",
-       "      <td>(300500.0, 6710500.0, 300500.0, 6710500.0, 300...</td>\n",
-       "      <td>79</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5875 rows × 5 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            Mass       Biomass location  MassCoefficient  \\\n",
-       "0       0.880735  (345500.0, 6734500.0)                1   \n",
-       "1       0.704648  (344500.0, 6734500.0)                1   \n",
-       "2      48.168853  (334500.0, 6734500.0)               48   \n",
-       "3      12.519086  (333500.0, 6734500.0)               13   \n",
-       "4       9.030584  (332500.0, 6734500.0)                9   \n",
-       "...          ...                    ...              ...   \n",
-       "5909   33.390363  (304500.0, 6710500.0)               33   \n",
-       "5910   54.179336  (303500.0, 6710500.0)               54   \n",
-       "5911   67.047351  (302500.0, 6710500.0)               67   \n",
-       "5912  139.271744  (301500.0, 6710500.0)              139   \n",
-       "5913  195.210328  (300500.0, 6710500.0)              195   \n",
-       "\n",
-       "                            LocationWithMassCoefficient  Cluster  \n",
-       "0                                 (345500.0, 6734500.0)      198  \n",
-       "1                                 (344500.0, 6734500.0)      198  \n",
-       "2     (334500.0, 6734500.0, 334500.0, 6734500.0, 334...      108  \n",
-       "3     (333500.0, 6734500.0, 333500.0, 6734500.0, 333...      108  \n",
-       "4     (332500.0, 6734500.0, 332500.0, 6734500.0, 332...      108  \n",
-       "...                                                 ...      ...  \n",
-       "5909  (304500.0, 6710500.0, 304500.0, 6710500.0, 304...       33  \n",
-       "5910  (303500.0, 6710500.0, 303500.0, 6710500.0, 303...       33  \n",
-       "5911  (302500.0, 6710500.0, 302500.0, 6710500.0, 302...       79  \n",
-       "5912  (301500.0, 6710500.0, 301500.0, 6710500.0, 301...       79  \n",
-       "5913  (300500.0, 6710500.0, 300500.0, 6710500.0, 300...       79  \n",
-       "\n",
-       "[5875 rows x 5 columns]"
+       "25"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "len(thinned_and_clustered_tires['tire_number_5']['ThinnedClusters'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "8f398ac7",
+   "execution_count": 237,
+   "id": "be280932",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def thin_clusters(df,tire_thickness,tires,cluster_divisor,facility_loc):\n",
+    "def thin_clusters(df,tire_thickness,tires,cluster_divisor_coefficient,facility_loc):\n",
     "    \n",
     "    # Define the WGS84 and EUREF-FIN coordinate systems\n",
     "    wgs84 = pyproj.CRS('EPSG:4326')\n",
@@ -1281,16 +1007,28 @@
     "    \n",
     "    # Calculate the distances\n",
     "    distances = df['Biomass location'].apply(lambda loc: math.sqrt(pow(facility_loc[0]-loc[0],2)+pow(facility_loc[1]-loc[1],2))/1000)\n",
-    "    print(max(distances))\n",
     "    i_values = {}  # Create an empty dictionary to store the separated dataframe names and their values\n",
     "    \n",
     "    for i in range(tires,0,-1): # Reversed looping for handling the tires in a smarter way\n",
     "        \n",
+    "        # Reordering the data to subsets of tires\n",
     "        df_name = f\"tire_number_{i}\"  # Generate the variable name using the for loop index        \n",
     "        i_values[df_name] = df[(tire_thickness*(i-1) <= distances) & (distances <= tire_thickness*i)]  # Assign the filtered data to the corresponding tire\n",
     "\n",
-    "    return i_values    \n",
-    "    "
+    "        # Coordinates with mass coefficients of a data subset \n",
+    "        coords = i_values[df_name]['LocationWithMassCoefficient'].explode().tolist()\n",
+    "        LocationMassCoords = [(coords[i], coords[i+1]) for i in range(0, len(coords)-1, 2)]\n",
+    "        LocationMassCoords = np.array(LocationMassCoords)\n",
+    "\n",
+    "        # CLustering the data of a subset with k-value defined by cluster_divisor_coefficient. Thinning the cluster-areas from \n",
+    "        # greater distance. Saving new clusters to ThinnedCLusters columns\n",
+    "        previous_kluster_amount = len(i_values[df_name]['Cluster'].unique())\n",
+    "        kmeans = KMeans(n_clusters=int(previous_kluster_amount*pow(cluster_divisor_coefficient,i-1)),n_init='auto')\n",
+    "        kmeans.fit(LocationMassCoords)\n",
+    "\n",
+    "        i_values[df_name]['ThinnedClusters'] = kmeans.predict(i_values[df_name]['Biomass location'].tolist())\n",
+    "\n",
+    "    return i_values    "
    ]
   },
   {
