greatest distance to global variable

--- a/Biomassa-atlas_data/data_procession.ipynb
+++ b/Biomassa-atlas_data/data_procession.ipynb
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 339,
-   "id": "7ef218d4",
+   "id": "937369f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 340,
-   "id": "5f16f061",
+   "id": "cfb7072d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 362,
    "id": "70fd5599",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,8 @@
     "greatest_distance = None\n",
     "\n",
     "def set_facility_loc_and_rad():\n",
-    "    global facility_loc  \n",
+    "    global facility_loc\n",
+    "    global greatest_distance  \n",
     "    user_input = input(\"Give the coordinates of facility in inspection as a tuple: \")\n",
     "    trimmed_input = user_input.strip(\"())\")\n",
     "    coordinates = trimmed_input.split(\",\")\n",
@@ -208,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 343,
-   "id": "d0f976c7",
+   "id": "a6867b99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 353,
-   "id": "57bffab2",
+   "id": "10020ad4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 361,
-   "id": "a94795a0",
+   "id": "0d4c466e",
    "metadata": {},
    "outputs": [
     {
