restructuring code, clusters to geojsons

--- a/Biomassa-atlas_data/data_procession.ipynb
+++ b/Biomassa-atlas_data/data_procession.ipynb
@@ -384,6 +384,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "576968f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def euref_fin_to_lon_lat(row):\n",
+    "    \n",
+    "    # Simple function to convert EUREF-FIN coordinates to lon-lat\n",
+    "    \n",
+    "    etrs_tm35fin = pyproj.Proj(\"+proj=utm +zone=35 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs\")\n",
+    "    lon, lat = etrs_tm35fin(row['ClusterLocations'][0], row['ClusterLocations'][1], inverse=True)\n",
+    "    return pd.Series({'lon': lon, 'lat': lat})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6fb9b63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def toGeoJSONs(centroids,masses):\n",
+    "\n",
+    "    # Transfers and saves clusters into a geojson format. \n",
+    "    df = pd.DataFrame({'ClusterLocations': centroids, 'Clustermasses': masses}, index=range(1, len(centroids)+1))\n",
+    "    \n",
+    "    df[['lon','lat']] = df.apply(euref_fin_to_lon_lat,axis=1)\n",
+    "\n",
+    "    geometry = [Point(xy) for xy in zip(df['lon'], df['lat'])]\n",
+    "    gdf = gpd.GeoDataFrame(df, geometry=geometry, crs='EPSG:4326')\n",
+    "    gdf = gdf.drop('ClusterLocations',axis=1) \n",
+    "\n",
+    "    ## save the GeoDataFrame to a GeoJSON file\n",
+    "    path = './geojsons/'\n",
+    "    gdf.to_file(path + file+'.geojson', driver='GeoJSON')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "3bf24395",
    "metadata": {},
@@ -815,57 +854,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SOME COORDINATE-CONVERSION HANDLING\n",
-    "\n",
-    "# define the ETRS-TM35FIN projection\n",
-    "\n",
-    "# CHECK LATER IF THIS IS NEEDED AT ALL\n",
-    "\n",
-    "etrs_tm35fin = pyproj.Proj(\"+proj=utm +zone=35 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs\")\n",
-    "\n",
-    "# define a function to convert EUREF-FIN coordinates to lon-lat\n",
-    "def euref_fin_to_lon_lat(row):\n",
-    "    lon, lat = etrs_tm35fin(row['ClusterLocations'][0], row['ClusterLocations'][1], inverse=True)\n",
-    "    return pd.Series({'lon': lon, 'lat': lat})"
+    "toGeoJSONs(thinned_weighted_avg_centroids,thinned_sum_cluster_masses)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82936cbe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# CLUSTERS TO GEOJSONS\n",
-    "\n",
-    "df = pd.DataFrame({'ClusterLocations': weighted_avg_centroids, 'Clustermasses': sum_cluster_masses}, index=range(1, len(weighted_avg_centroids)+1))\n",
-    "\n",
-    "df[['lon','lat']] = df.apply(euref_fin_to_lon_lat,axis=1)\n",
-    "\n",
-    "geometry = [Point(xy) for xy in zip(df['lon'], df['lat'])]\n",
-    "gdf = gpd.GeoDataFrame(df, geometry=geometry, crs='EPSG:4326')\n",
-    "gdf = gdf.drop('ClusterLocations',axis=1) # Not needed anymore, these are in the wrong form of coordinates\n",
-    "\n",
-    "## save the GeoDataFrame to a GeoJSON file\n",
-    "path = './geojsons/'\n",
-    "gdf.to_file(path + file+'.geojson', driver='GeoJSON')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96bb7df5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f36d1e37",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
