small edit to unite_geojson to include information of cluster's biomass type, and refactoring of data_procession to not lose that information initially

--- a/Biomassa-atlas_data/data_procession.ipynb
+++ b/Biomassa-atlas_data/data_procession.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 31,
    "id": "d0b4e8bf",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
     "    df['Biomass location'] = df2\n",
     "\n",
     "    # Clean the dataframe\n",
-    "    df = df.loc[:, ['Mass','Biomass location']]\n",
+    "    df = df.loc[:, ['Type','Mass','Biomass location']]\n",
     "    mask = df['Biomass location'].apply(is_2d_tuple)\n",
     "    df = df[mask]\n",
     "    \n",
@@ -589,8 +589,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "05b217c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter biomassdata filename: SivuVirtaOlki2021\n",
+      "Enter the name of the folder where the file is located: Nurmet ja oljet\n",
+      "Give the coordinates of facility in inspection as a tuple: (60.929833, 23.369694)\n",
+      "Give greatest distance of what biomasses are included: 50\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Mass</th>\n",
+       "      <th>Biomass location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sivuvirta: Olki</td>\n",
+       "      <td>5.667554</td>\n",
+       "      <td>(278500.0, 6639500.0)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sivuvirta: Olki</td>\n",
+       "      <td>171.175036</td>\n",
+       "      <td>(212500.0, 6735500.0)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sivuvirta: Olki</td>\n",
+       "      <td>95.572340</td>\n",
+       "      <td>(211500.0, 6735500.0)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sivuvirta: Olki</td>\n",
+       "      <td>65.310390</td>\n",
+       "      <td>(210500.0, 6735500.0)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sivuvirta: Olki</td>\n",
+       "      <td>29.159215</td>\n",
+       "      <td>(209500.0, 6735500.0)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78641</th>\n",
+       "      <td>Sivuvirta: Olki</td>\n",
+       "      <td>0.181156</td>\n",
+       "      <td>(308500.0, 6641500.0)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78642</th>\n",
+       "      <td>Sivuvirta: Olki</td>\n",
+       "      <td>6.376281</td>\n",
+       "      <td>(282500.0, 6640500.0)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78643</th>\n",
+       "      <td>Sivuvirta: Olki</td>\n",
+       "      <td>9.969457</td>\n",
+       "      <td>(281500.0, 6640500.0)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78644</th>\n",
+       "      <td>Sivuvirta: Olki</td>\n",
+       "      <td>1.332805</td>\n",
+       "      <td>(278500.0, 6640500.0)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78645</th>\n",
+       "      <td>Sivuvirta: Olki</td>\n",
+       "      <td>5.759371</td>\n",
+       "      <td>(279500.0, 6639500.0)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>78646 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Type        Mass       Biomass location\n",
+       "0      Sivuvirta: Olki    5.667554  (278500.0, 6639500.0)\n",
+       "1      Sivuvirta: Olki  171.175036  (212500.0, 6735500.0)\n",
+       "2      Sivuvirta: Olki   95.572340  (211500.0, 6735500.0)\n",
+       "3      Sivuvirta: Olki   65.310390  (210500.0, 6735500.0)\n",
+       "4      Sivuvirta: Olki   29.159215  (209500.0, 6735500.0)\n",
+       "...                ...         ...                    ...\n",
+       "78641  Sivuvirta: Olki    0.181156  (308500.0, 6641500.0)\n",
+       "78642  Sivuvirta: Olki    6.376281  (282500.0, 6640500.0)\n",
+       "78643  Sivuvirta: Olki    9.969457  (281500.0, 6640500.0)\n",
+       "78644  Sivuvirta: Olki    1.332805  (278500.0, 6640500.0)\n",
+       "78645  Sivuvirta: Olki    5.759371  (279500.0, 6639500.0)\n",
+       "\n",
+       "[78646 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " \n",
+    "    filename = input(\"Enter biomassdata filename: \") + '.csv'\n",
+    "    folder = input(\"Enter the name of the folder where the file is located: \")\n",
+    "    path = './datasets/'\n",
+    "    set_facility_loc_and_rad()\n",
+    "    df = load_and_process_data(path+'/'+folder+'/'+filename)\n",
+    "    df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84faaa23",
    "metadata": {},
    "outputs": [],
    "source": []
