--- a/Biomassa-atlas_data/unite_geojsons.ipynb
+++ b/Biomassa-atlas_data/unite_geojsons.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "66cd15ad",
+   "execution_count": 21,
+   "id": "57c20ff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "362d18d5",
+   "execution_count": 22,
+   "id": "0b579a12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,30 @@
     "        if file_name.endswith('.geojson'):  \n",
     "            file_path = os.path.join(folder_path, file_name)\n",
     "            data = gpd.read_file(file_path)\n",
+    "            \n",
+    "            # Extract the data type from the file name\n",
+    "            data_type = file_name.split('.')[0]  # Assuming the file name format is \"datatype.geojson\"\n",
+    "            \n",
+    "            if data_type.startswith(\"H\"):\n",
+    "                data_type = 'Hevoset ja ponit, kuivalanta yhteensä varastosta'\n",
+    "            elif data_type.startswith(\"Nautojenlie\"):\n",
+    "                data_type = 'Lihakarjan lietelanta eläinsuojasta'\n",
+    "            elif data_type.startswith(\"Nautojenkui\"):\n",
+    "                data_type = 'Lihakarjan kuivalanta yhteensä varastosta'\n",
+    "            elif data_type.startswith(\"Siipi\"):\n",
+    "                data_type = 'Broilerit, kalkkunat ja muu siipikarja kuivalanta yhteensä varastosta'            \n",
+    "            elif data_type.startswith(\"Sikojen lie\"):\n",
+    "                data_type = 'Emakot ja porsaat lietelanta eläinsuojasta'\n",
+    "            elif data_type.startswith(\"SivuvirtaOl\"):\n",
+    "                data_type = 'Sivuvirta: Olki'            \n",
+    "            elif data_type.startswith(\"Sivuvirtanurm\"):\n",
+    "                data_type = 'Sivuvirta: Kesantonurmi'\n",
+    "            elif data_type.startswith(\"Säilö\"):\n",
+    "                data_type = 'Sivuvirta: Kuivaheinänurmet'\n",
+    "            \n",
+    "            # Add the data type as a new column to the GeoDataFrame\n",
+    "            data['Type'] = data_type\n",
+    "            \n",
     "            geojson_data.append(data)\n",
     "            \n",
     "    return geojson_data"
@@ -40,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "71eb0e27",
+   "execution_count": 23,
+   "id": "74d31753",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,26 +77,18 @@
     "    combined_data = gpd.GeoDataFrame(pd.concat(geojson_data, ignore_index=True))\n",
     "    \n",
     "    # Save the combined GeoJSON to a file\n",
-    "    combined_data.to_file('geojsons/all_pickup_sites.geojson', driver='GeoJSON')"
+    "    combined_data.to_file('all_pickup_sites.geojson', driver='GeoJSON')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "31b78419",
+   "execution_count": 24,
+   "id": "8fc479b0",
    "metadata": {},
    "outputs": [],
    "source": [
     "main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0793b533",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
